--- a/ass/style.css
+++ b/ass/style.css
@@ -10,18 +10,18 @@
         }
         
        .slide-1 {
-    background: url('../ass/img/istockphoto-1407290289-612x612.jpg') no-repeat center center;
+    background: url('../ass/img/hero-1.jpg') no-repeat center center;
     background-size: cover;
     
 }
 
 .slide-2 {
-    background: url('../ass/img/istockphoto-2148229041-612x612.jpg') no-repeat center center;
+    background: url('../ass/img/hero-2.jpg') no-repeat center center;
     background-size: cover;
 }
 
 .slide-3 {
-    background: url('../ass/img/istockphoto-688787498-612x612.jpg') no-repeat center center;
+    background: url('../ass/img/hero-3.jpg') no-repeat center center;
     background-size: cover;
 }
 
