change about section

--- a/assets/style.css
+++ b/assets/style.css
@@ -103,7 +103,7 @@
         }
         
        .slide-1 {
-    background: url('../assets/img/Cover Egypt.png') no-repeat center center;
+    background: url('../assets/img/hero-1.jpg') no-repeat center center;
     background-size: cover;
     
 }
