--- a/assets/style.css
+++ b/assets/style.css
@@ -103,18 +103,18 @@
         }
         
        .slide-1 {
-    background: url('../assets/img/hero-1.jpg') no-repeat center center;
+    background: url('../assets/img/hero-1.png') no-repeat center center;
     background-size: cover;
     
 }
 
 .slide-2 {
-    background: url('../assets/img/hero-2.jpg') no-repeat center center;
+    background: url('../assets/img/hero-2.png') no-repeat center center;
     background-size: cover;
 }
 
 .slide-3 {
-    background: url('../assets/img/hero-3.jpg') no-repeat center center;
+    background: url('../assets/img/hero-3.png') no-repeat center center;
     background-size: cover;
 }
 
