--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,18 +105,18 @@
         }
         
        .slide-1 {
-    background: url('../assets/img/hero-1.png') no-repeat center center;
+    background: url('../img/hero-1.png') no-repeat center center;
     background-size: cover;
     
 }
 
 .slide-2 {
-    background: url('../assets/img/hero-2.png') no-repeat center center;
+    background: url('../img/hero-2.png') no-repeat center center;
     background-size: cover;
 }
 
 .slide-3 {
-    background: url('../assets/img/hero-3.png') no-repeat center center;
+    background: url('../img/hero-3.png') no-repeat center center;
     background-size: cover;
 }
 
