add img in hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@
 }
 
 .slide-3 {
-    background: url('../img/hero-3.png') no-repeat center center;
+    background: url('../img/ايجيبت.png') no-repeat center center;
     background-size: cover;
 }
 
